打印命令错误详情